<resources>
    <string name="app_name">takeYourMed</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <color name="blue">#3f51b5</color>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_info">Info</string>
    <string name="menu_reminder">Reminder</string>
    <string name="menu_doctor">Doctor</string>
    <string name="menu_eyedisease">Eye Disease</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Take Photo</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="sign_in">sign in</string>
    <string name="logout">Logout</string>


    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">Press the button below to add your reminder</string>

    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">Time</string>
    <string name="label">Medicine Label</string>
    <string name="days">Days</string>
    <string name="edit_alarm">Edit Reminder</string>
    <string name="add_alarm">Add Reminder</string>
    <string name="add_label_hint">Enter your medicine name</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Reminder Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Reminder</string>
    <string name="delete_dialog_content">Are you sure you would like to delete this reminder?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Edit Alarm Menu -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>

    <!-- Days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Notification -->
    <string name="channel_name">Take Your Med</string>
    <string name="conjDef">Conjunctivitis is an inflammation of the conjunctiva or mucous membranes called the mucosal layer.</string>
    <string name="conjDes">People generally refer to conjunctivitis as a contagious red eye disease. In newborns alone can suffer from conjunctivitis because newborns can get gonococcal infection in the conjunctiva from their mother when passing through the birth canal.</string>
    <string name="conjCause">Bacterial or viral infections</string>
    <string name="conjTreat">Please consult your nearest Eye Specialist!</string>
    <string name="presDef">Presbyopia is an age -related condition in which a person cannot focus when looking at objects at close range. Presbyopia is an unavoidable process of eye aging and generally begins around the age of 40 years.</string>
    <string name="presDes">The eye lens is surrounded by muscles that are elastic, so it can change the shape of the lens to focus light. But as we age, the muscles around the lens of the eye lose their elasticity and harden. It is the condition of hardening of the lens muscles that causes presbyopia. The lens becomes rigid and cannot change shape, making the light entering the retina out of focus.</string>
    <string name="presCause">Age. Almost everyone will experience symptoms of presbyopia after the age of 40. Drugs. Some medications such as antihistamines, antidepressants, and diuretics are associated with symptoms of premature presbyopia, which is presbyopia in individuals under 40 years of age. Disease. Diabetes, multiple sclerosis, or heart and vascular disease can increase the risk of premature presbyopia.</string>
    <string name="presTreat">Please consult your nearest Eye Specialist!</string>
    <string name="episDef">Episcleritis is an inflammatory reaction of the inner conjunctival tissue located on the surface of the scales. The skelera is an eyeball wall that consists of a strong connective tissue that is not clear and inelastic with a thickness of about 1 mm. The posterior scelera is penetrated by the optic nerve in a part called the lamina kribrosa sclera. On the skelra there is an insertion of 6 eye -moving muscles.</string>
    <string name="episDes">There is usually a purple -red swelling under the conjunctiva. If the swelling is pressed then it will cause pain.</string>
    <string name="episCause">Episcleritis occurs when there is inflammation of the tissue between the sclera and conjunctiva. Episcleritis starts from small blood vessels and spreads to the surface of the eye.</string>
    <string name="episTreat">Please consult your nearest Eye Specialist!</string>
    <string name="keratDef">Keratitis is a disorder caused by an infiltrate of inflammatory cells in the cornea that will cause the cornea to become cloudy, usually classified in the infected layers such as superficial, intertitisial and deep keratitis.</string>
    <string name="keratDes">In superficial keratitis is a condition in which the cells on the surface of the cornea die. Keratitis can be caused by dry eye syndrome, blepharitis, chronic conjunctivitis, drug poisoning, ultraviolet rays, or can also be due to secondary infections. Keratitis can cause turbidity in the media of the cornea, then the sharpness of vision will decrease. The eyes will be red as a result of a deep pericorneal vascular injection or ciliary injection.</string>
    <string name="keratCause">Keratitis can be caused by a viral, bacterial, fungal, or parasitic infection. However, the most common cause of keratitis is an injury to the cornea. This corneal injury can be due to the use of contact lenses, foreign object scratches on the cornea, or chemical contamination, such as in a swimming pool. The use of contact lenses is a major factor that can increase the risk of keratitis. This is caused, among other things, due to contact lenses that are not clean, use for too long, or due to contaminated lens cleaning fluid. In addition, vitamin A deficiency, dry eyes, intense sun exposure, and autoimmune diseases can also lead to keratitis.</string>
    <string name="keratTreat">Please consult your nearest Eye Specialist!</string>
    <string name="sklDef">Scleritis or inflammation of the whites of the eyes is an inflammation that occurs in the deeper sclera due to the occurrence of scleral necrosis or scleromalacia, then there can be preforation of the sclera.</string>
    <string name="sklDes">Scleritis looks like a slightly bluer lump. Sometimes about the whole cone circle. Scleritis itself is divided into two conditions. First, posterior scleritis, which is inflammation of the sclera located behind the eyeball. The second is the anterior sclera, which is scleritis of the sclera in front of the eyeball.</string>
    <string name="sklCause">In general, scleritis or inflammation of the sclera is experienced by women in the age range of 40 years and above. If you have an autoimmune condition or a disease related to connective tissue, the risk of developing scleritis becomes increased.</string>
    <string name="sklTreat">Please consult your nearest Eye Specialist!</string>
    <string name="uvDef">Uveitis is an inflammation that occurs in the uvea or middle layer of the eye. This condition is characterized by one or both eyes looking very red because of the many blood vessels in the uvea. Generally, uveitis is experienced by adults aged 20 years and older, but sometimes also experienced by children.</string>
    <string name="uvDes">The uvea is the middle layer on the inside of the eye which consists of the rainbow membrane of the eye (iris), the lining of the blood vessels of the eye (choroid), and the connective tissue between the iris and the choroid (ciliary body). The uvea is located between the white part of the eye (sclera) and the back of the eye that captures light (retina).</string>
    <string name="uvCause">Uveitis is often of unknown cause and is sometimes experienced by healthy people. However, most uveitis is associated with autoimmune disorders, which are conditions when the immune system attacks the body itself.</string>
    <string name="uvTreat">Please consult your nearest Eye Specialist!</string>
    <string name="hordDef">Bintitan or in medical language called hordeolum is a condition when painful nodules that look like acne or boils grow on the edges of the eyelids. Most spots appear only in one eye. This condition also generally does not adversely affect the vision of the sufferer.</string>
    <string name="hordDes">Itching usually occurs on the outer eyelids, but can sometimes also appear on the inside. Pimples that grow on the inside are more painful than those that grow on the outside.</string>
    <string name="hordCause">The main cause of stinging is staphylococcal bacteria. Examples of infections caused by bacteria that can trigger pimples are infections that occur at the roots of the eyelashes, oil glands, and sweat glands. Staphylococcal bacteria usually live on human skin without causing disease. But the risk of stinging will increase when we touch the eyes with dirty hands.</string>
    <string name="hordTreat">Please consult your nearest Eye Specialist!</string>
    <string name="resultCataract01">Thank you for choosing the symptoms you feel. Based on the symptoms selected, you may diagnosed with:</string>
    <string name="infoooo">This app created to increase people awareness about eye disease and to make sure their intake of medicines at the right time according to the doctor\'s prescription</string>

    <string-array name="diseaseList">

        <item>Please select</item>
        <item>Conjunctivity</item>
        <item>Presbiopia</item>
        <item>Episkleritis</item>
        <item>Keratitis</item>
        <item>Skleritis</item>
        <item>Uveitis</item>
        <item>Hordeolum</item>

    </string-array>
</resources>