<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.eyedisease.ConjunctivityActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/conj"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="Definition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/conjDef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/conjDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="Causes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/conjCause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="Treatment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/conjTreat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </LinearLayout>





    </ScrollView>



</LinearLayout>